--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -8,11 +8,8 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'charts/**'
-      - '.github/workflows/helm-release.yml'
-  release:
-    types: [published]
+    tags:
+      - "v*"
 
 env:
   REGISTRY: ghcr.io
